Try to fix font flickering

--- a/src/main/styles/app.less
+++ b/src/main/styles/app.less
@@ -41,6 +41,7 @@ body,
 .ReactModalPortal {
   margin: 0;
   font-family: 'Barlow';
+  font-display: optional;
   background-color: var(--bg-color);
   color: var(--text-color);
   height: 100%;
